The eevee view model failed to load the texture, causing the model to be purple #57759

Closed
opened 2018-11-10 02:53:31 +01:00 by Leon Lee · 17 comments

macOS 10.14 Mojave GPU: Radeon Pro Duo CPU: Intel Core i7

Blender 2.80.30 dc21ef7b86

The eevee view model failed to load the texture, causing the model to be purple,and No fog effect

屏幕快照 2018-11-10 09.47.21.jpg

macOS 10.14 Mojave GPU: Radeon Pro Duo CPU: Intel Core i7 Blender 2.80.30 dc21ef7b86c The eevee view model failed to load the texture, causing the model to be purple,and No fog effect ![屏幕快照 2018-11-10 09.47.21.jpg](https://archive.blender.org/developer/F5467947/屏幕快照_2018-11-10_09.47.21.jpg)

Added subscriber: @lileo

Added subscriber: @lileo

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Cannot reproduce here (linux, 970m).

  • Is this using the current (unaltered) sample file from https://www.blender.org/2-8/ ?
  • Do the images show up in the ImageEditor?
  • Does going in and out of editmode make a difference?
  • Does changing viewmodes (going to solid/lookdev and back to rendered) make a difference?

Marking as incomplete until we narrowed this doen a bit...

Cannot reproduce here (linux, 970m). - Is this using the current (unaltered) sample file from https://www.blender.org/2-8/ ? - Do the images show up in the ImageEditor? - Does going in and out of editmode make a difference? - Does changing viewmodes (going to solid/lookdev and back to rendered) make a difference? Marking as incomplete until we narrowed this doen a bit...

未命名.jpg

![未命名.jpg](https://archive.blender.org/developer/F5612322/未命名.jpg)
  • Do the images show up in the ImageEditor?

I mean the textures, do they show up in the Image Editor?

other questions have not been answered...

> - Do the images show up in the ImageEditor? I mean the textures, do they show up in the Image Editor? other questions have not been answered...
[Blender 2.8 EEVEE bug.mp4](https://archive.blender.org/developer/F5797716/Blender_2.8_EEVEE_bug.mp4)

Thanx for getting back (sorry this took a while)

I still cannot reproduce, maybe someone an MACOS can confirm?

Thanx for getting back (sorry this took a while) I still cannot reproduce, maybe someone an MACOS can confirm?

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Is this still an issue with the latest blender beta?

Is this still an issue with the latest blender beta?

Added subscriber: @DAR

Added subscriber: @DAR

Hello,

With the latest dev built (2019.02.05: blender-2.80.0-git20190205.08ab09cf04d9-x86_64), and since 2018 July :
I confirm the rendering bug with Eevee. With the official wanderer.blend, the character is rendered purple (strictly as shown in images & movie posted above).
I can reproduce the problem with 2 machines:

  • iMac 5K 2017, 64Go RAM, macOS Sierra (10.12.6), ATI Radeon Pro 575
  • MacPro 5.1 (2012), 128 Go RAM, macOS High Sierra (all versions, the latest one 10.13.6), nVidia GTX 1080Ti 12Go.

The problem seems to stick with macOS System.
+++ Booting under Linux distros (Ubuntu, Mint) the problem does not exist , with my MacPro 5.1 +++

Alain

Hello, With the latest dev built (2019.02.05: blender-2.80.0-git20190205.08ab09cf04d9-x86_64), and since 2018 July : I confirm the rendering bug with Eevee. With the official wanderer.blend, the character is rendered purple (strictly as shown in images & movie posted above). I can reproduce the problem with 2 machines: - iMac 5K 2017, 64Go RAM, macOS Sierra (10.12.6), ATI Radeon Pro 575 - MacPro 5.1 (2012), 128 Go RAM, macOS High Sierra (all versions, the latest one 10.13.6), nVidia GTX 1080Ti 12Go. The problem seems to stick with macOS System. +++ Booting under Linux distros (Ubuntu, Mint) the problem does not exist , with my MacPro 5.1 +++ Alain
Clément Foucault was assigned by Sebastian Parborg 2019-02-06 12:17:00 +01:00

If this is a shader compilation problem, generally it should say something in the system console output.

https://docs.blender.org/manual/en/latest/render/workflows/command_line.html

Run blender from a console, copy paste the output in a file and attach it here.

If this is a shader compilation problem, generally it should say something in the system console output. https://docs.blender.org/manual/en/latest/render/workflows/command_line.html Run blender from a console, copy paste the output in a file and attach it here.

Hello Clément,
Here is the output of the Terminal window.
thanks{F6527363}

Hello Clément, Here is the output of the Terminal window. thanks{[F6527363](https://archive.blender.org/developer/F6527363/wanderer_Eevee_purple_BUG.txt)}

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Well you have the issue explained here.

ERROR: Implementation limit of 16 active fragment shader samplers (e.g., maximum number of supported image units) exceeded, fragment shader uses 28 samplers

The driver don't support more than 16 textures at the same time and EEVEE needs ~10 of thoses slots for it's own purpose.

Most drivers nowadays support 32 textures but seems that this one does not. Nothing we can do about that.

Well you have the issue explained here. `ERROR: Implementation limit of 16 active fragment shader samplers (e.g., maximum number of supported image units) exceeded, fragment shader uses 28 samplers` The driver don't support more than 16 textures at the same time and EEVEE needs ~10 of thoses slots for it's own purpose. Most drivers nowadays support 32 textures but seems that this one does not. Nothing we can do about that.

This issue was referenced by c0640ddff9

This issue was referenced by c0640ddff93664bb6bf7ea3b57146ed3ca462340

This issue was referenced by 32d19f7317

This issue was referenced by 32d19f7317e9f2d726230a67ba9fed623fee337e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57759
There is no content yet.